# viral-genome-cataloger

./: .gitignore  INTEGRATION.md  LICENSE  METHODOLOGY.md  README.md  TECHNICAL_EXPLANATION.md  create_genome_catalog.py  pyproject.toml
src/viral_cataloger/: __init__.py  main.py  pipeline.py  slurm.py
tests/: test_clustering.py  test_fasta.py  test_slurm.py
tests/data/: ani_formatted.txt  sample.fasta  skani_results.txt
