[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viral-genome-cataloger"
version = "0.1.0"
description = "Create dereplicated viral genome catalogs from assemblies using skani and seqkit."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Viral Genome Cataloger Contributors" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
viral-cataloger = "viral_cataloger.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
